2004-08-31 Arwed v. Merkatz <v.merkatz@gmx.net>
	* BUILD: converted to BUILD_API 2
	* DETAILS: cleanups
	* DEPENDS: added optional_depends on alsa-lib

2004-08-03 Eric Sandall <eric@sandall.us>
	* DEPENDS: SDL_image renamed to sdl_image
	  Formatted to Guru Handbook

2004-05-11 Treeve Jelbert <treeve01@pi.be>
	* gcc.diff: add
	* BUILD: apply patch
	  fixes gcc-3.4.0 problems

2004-03-07 Treeve Jelbert <treeve01@pi.be>
	* DETAILS: version 0.2.4
	* BUILD: set FFMPEG flags, cleanup

2003-10-14 Treeve Jelbert <treeve01@pi.be>
	* DETAILS: version 0.2.3

2003-01-13 Treeve Jelbert <treeve01@pi.be>
	* DETAILS: version 0.2.2
	  spell created
