@@ -1,3 +1,5 @@
 FFMPEG_CXXFLAGS=/usr/include/ffmpeg
 patch  -p1  <  $SPELL_DIRECTORY/gcc.diff  &&
+mkdir  libdv                              &&
+cp  $SCRIPT_DIRECTORY/dv1394.h  libdv     &&
 default_build
