@@ -2,7 +2,6 @@ depends  sdl_image   &&
 depends  libdv       &&
 depends  libxml2     &&
 depends  gdk-pixbuf  &&
-depends  libraw1394  &&
 depends  libavc1394  &&
 depends  freetype2   &&
 
