@@ -1,3 +1,8 @@
+2005-04-08 Arwed v. Merkatz <v.merkatz@gmx.net>
+	* DEPENDS: removed libraw1394, already included by libavc1394
+	* BUILD, dv1394.h: copy dv1394.h into src directory, it's not
+	  included in recent libdv releases anymore
+
 2004-08-31 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* BUILD: converted to BUILD_API 2
 	* DETAILS: cleanups
